[package]
name = "vsop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.85"
ct2rs = { path = "../ctranslate2-rs", features = ["accelerate"] }
tempfile = "3.10.1"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
directories = "5.0.1"
spinners = "4.1.1"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
prost = "0.12.6"
tokio-stream = { version = "0.1.15", features = ["net"] }
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.11.0"
